--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ idna==3.10
 mysql-connector-python==9.4.0
 pydantic==2.11.7
 pydantic_core==2.33.2
+python-dotenv==1.1.1
 sniffio==1.3.1
 starlette==0.47.3
 typing-inspection==0.4.1
